--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Just Testing out some stuff!</h1>
-    We are just making some changes
+    We are just making some changes I 
+    Am trying to create a conflict
 </body>
 </html>
